--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,145 @@
+html{
+	scroll-behavior: smooth;
+}
+
+.nav-bar{
+	overflow: hidden;
+	list-style: none;
+	text-align: right;
+	background-color: lightgrey;
+	color: #000000;
+	padding: 10px 0 0 0;
+	position: sticky;
+	top:0;
+	width: 100%;
+	border-bottom: 1px solid black;
+	border-top: 1px solid black;
+		border:1px solid black;
+}
+
+.nav-bar > li{
+	display: inline-block;
+	padding: 0 25px 0 25px;
+	font-size: 12px;
+
+}
+
+.nav-bar > li >a{
+	text-decoration: none;
+	color: #000000;
+}
+
+.nav-bar > li >a:hover{
+	color: #c1c1c1;
+}
+
+.banner{
+	width:100%;
+	top: 0;
+	display: block;
+}
+
+.banner > .banner-image{
+	width:100%;
+	height: 30;
+	top: 0;
+	display: block;
+	border-bottom: 1px solid black;
+}
+
 body{
-	background-color:grey;
-	font-family:"Arial";
-	font-size:14px;
-}
-h1{
-	font-size:13px;
-
-}
-h2{
-	color:red;
+	background-image: url(../images/laptop.jpeg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
+	margin:0;
 }
 
-img{
-	border-radius:50%;
+h1,h2,h3,h4{
+	padding-left: 100px;
+}
+
+.intro, .Experience, .Projects,.Contact{
+	font-family:cursive;
+	font-size:20px;
+	color: black;
+}
+
+.Projects img{
+	display: block;
+	margin-right: auto;
+	border-radius: 50%;
+	height: 100px;
+	width: 100px;
+}
+
+.intro img{
+	display: block;
+	margin-left: 900px;
+	margin-top: -350px;
+	margin-right: auto;
+	margin-bottom: 30px;
+	border-radius: 0%;
+	border-style: groove;
+	border-width: thin;
+	border-radius: 30%;
+	height: 450px;
+	width: 250px;
+}
+
+p{
+	padding-left: 100px;
+	word-wrap: break-word;
+	width:600px;
+}
+
+.Experience{
+	padding-top: 180px;
+}
+
+.Projects{
+	padding-top:180px;
+}
+
+.Contact{
+	padding-top:160px;
+}
+
+.intro{
+	padding-top: 100px;
+}
+
+.Contact{
+	padding-top: -50px;
+}
+
+.image1{
+	margin-left: 0px;
+	margin-top: 20px;
+
+}
+
+.image2{
+	margin-left: 450px;
+	margin-top:-100px;
+}
+
+.image3{
+	margin-left: 155px;
+	margin-top: -100px;
+}
+
+.image4{
+	margin-left: 300px;
+	margin-top: -100px;
+}
+
+form{
+	padding-left: 100px;
+}
+
+li{
+	display:inline-block;
+	margin: 10px;
+	padding-left: 50px;
 }
