--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ html{
 	background-color: lightgrey;
 	color: #000000;
 	padding: 10px 0 0 0;
-	position: sticky;
+	position: fixed;
 	top:0;
 	width: 100%;
 	border-bottom: 1px solid black;
