--- a/css/style.css
+++ b/css/style.css
@@ -1,36 +1,93 @@
 html{
 	scroll-behavior: smooth;
 }
-
-.nav-bar{
+/* Navigation Settings */
+.navbar{
 	overflow: hidden;
-	list-style: none;
-	text-align: right;
-	background-color: lightgrey;
-	color: #000000;
-	padding: 10px 0 0 0;
 	position: fixed;
-	top:0;
 	width: 100%;
-	border-bottom: 1px solid black;
-	border-top: 1px solid black;
-		border:1px solid black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
+  color: white;
 }
 
-.nav-bar > li{
-	display: inline-block;
-	padding: 0 25px 0 25px;
-	font-size: 12px;
-
+.brand-title{
+  font-size: 1.5rem;
+  margin: .5rem;
 }
 
-.nav-bar > li >a{
-	text-decoration: none;
-	color: #000000;
+.navbar-links ul{
+  margin:0;
+  padding: 0;
+  display: flex;
 }
 
-.nav-bar > li >a:hover{
-	color: #c1c1c1;
+.navbar-links li{
+  list-style: none;
+}
+
+.navbar-links li a{
+  text-decoration: none;
+  color: white;
+  padding: 1rem;
+  display: block;
+}
+
+.navbar-links li:hover{
+  background-color: #555;
+}
+
+.toggle-button{
+  position: absolute;
+  top: .75rem;
+  right: 1rem;
+  display: none;
+  flex-direction:column;
+  justify-content: space-between;
+  width: 30px;
+  height: 21px;
+}
+
+.toggle-button .bar{
+  height: 3px;
+  width: 100%;
+  background-color: white;
+  border-radius: 10px;
+}
+
+@media(max-width: 600px) {
+  .toggle-button{
+    display: flex;
+  }
+
+  .navbar-links{
+    display:none;
+    width: 100%;
+  }
+
+  .navbar{
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .navbar-links ul{
+    width: 100%;
+    flex-direction: column;
+  }
+
+  .navbar-links li{
+    text-align: center;
+  }
+
+  .nav-links li a{
+    padding: .5rem 1rem;
+  }
+
+  .navbar-links.active{
+    display: flex;
+  }
 }
 
 .banner{
@@ -73,18 +130,27 @@ h1,h2,h3,h4{
 	width: 100px;
 }
 
+/* Customization for images used*/
 .intro img{
-	display: block;
-	margin-left: 900px;
-	margin-top: -350px;
-	margin-right: auto;
-	margin-bottom: 30px;
-	border-radius: 0%;
-	border-style: groove;
-	border-width: thin;
-	border-radius: 30%;
-	height: 450px;
+  float: right;
+	height: 400px;
 	width: 250px;
+	margin-left: 900px;
+	margin-top: -250px;
+	margin-right: 250px;
+	margin-bottom: 30px;
+  display: inline;
+  border: 10px solid #fff;
+  border-bottom: 45px solid #fff;
+  webkit-box-shadow: 5px 5px 5px #777;
+  moz-box-shadow: 5px 5px 5px #777;
+  box-shadow: 5px 5px 5px #777;
+}
+
+@media(max-width: 600px){
+	.intro img{
+		display: none;
+	}
 }
 
 p{
@@ -106,7 +172,7 @@ p{
 }
 
 .intro{
-	padding-top: 100px;
+	padding-top: 200px;
 }
 
 .Contact{
@@ -142,4 +208,49 @@ li{
 	display:inline-block;
 	margin: 10px;
 	padding-left: 50px;
+}
+
+/* Contact Form */
+input[type=text]{
+  width: 70%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 70%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/*Configuration for smaller screens*/
+@media(max-width: 600px){
+  .banner h1{
+    padding-top: 20vh;
+  }
+  .about{
+  }
+  .experience{
+    padding-top: 40vh;
+  }
+  .contact{
+    padding-top: 20vh;
+  }
+  .intro-img{
+    height: 400px;
+    width: 200px;
+  }
 }
