--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ html{
 .navbar{
 	overflow: hidden;
 	position: fixed;
-	width: 100%;
+	width: 100vh;
   display: flex;
   justify-content: space-between;
   align-items: center;
